umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_rdkit_wedging_problems2.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 39
bond_count: 42
sum_formula: C23H9FO6
graph6: f????C@?G@?A?O?@??o?_?O??@???g?A?_??C??M??@O?????@@??O?@??A???AGO???GC???G@?????_????C??????G?????_????@?????@??????G?????@??
