umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_rhea_CHEBI_17015.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 27
bond_count: 29
sum_formula: C17N4O6
graph6: "Z`GOGS?SC@G??@?G?Cd????C??G??G??G??A???_??@???C???A?O???O???"
