umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_rhea_POLYMER_12833.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 127
bond_count: 128
sum_formula: C84N2O36P5-5
graph6: ~?@~iO_GGC?_?_@?@??_AG?G??O?A??@???_??A???G??@???_???@????_???G???@???@C???@?????_????G????_????AC??????????@?????@??????_?????O?????@??????C??????G??????G??????G??????@???????G???????_??????@???????A???????@????????G???????@????????C????????O????????O????????C????????@?????????G????????@?????????A?????????@??????????_?????????G?????????A??????????G??????????G??????????G??????????C??????????A???????????O???????????_??????????@???????????@???????????@????????????O???????????@????????????C????????????G????????????O????????????G????????????@?????????????G?????????????_????????????A?????????????A??????????????_?????????????G?????????????@??????????????G?????????????????????????????G??????????????C??????????????C???????????????_??????????????A?????C?????????@???????????????@???????????????@?????A??????????????????????????@????????????????G?????????????????????????????????G????????????????C????????????????C?????????????????_????????????????A???????????????C?@?????????????????@?????????????????@?????????????????C??????????????????@?????????????????G?????????????????C???????????????????????????????????????C??????????????????@???????????????????_??????????????????A???????????????????C??????????????????C@????????????????????_???????????????????O???????????????????_????????????????????C???????????????????O???????????????????C??
