umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_rhea_POLYMER_17341.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 36
bond_count: 39
sum_formula: C15HN6O11P2-2
graph6: chC?iO??G?_@?@?@?AO?C?????G??G??C??@?G?G??G_??@?G?@???O??????A??????GC???G????G????GG????????CG?????_????A
