umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_rhea_POLYMER_17344.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 15
bond_count: 15
sum_formula: C5HO7P-1
graph6: NhC?iO??GG_@?AA??G?
